# DoggyNeuralGlitch

./: .gitignore  LICENSE  README.md  config.py  glitch_effects.py  justfile  main.py  neural_core.py  pyproject.toml  requirements.txt  test.py
